# lighting-esp32

./: README.md
FreeRTOS/: README.md
FreeRTOS/YamahaLightingEsp32/main/: CMakeLists.txt  main_freeRTOS.cpp
FreeRTOS/YamahaLightingEsp32/main/BlockB++/include/: blockb_types.hpp  dimmer_time_adaptor.hpp  frame_history.hpp  highlight_detector.hpp  idle_state_detector.hpp  light_switch_flg_maker.hpp  lighting_switcher.hpp  music_data_handler.hpp  music_to_light_interpretor.hpp  performer_switch_detector.hpp  section_progression_detector.hpp  song_alternation_detector.hpp  songhook_detector.hpp  tempo_classifier.hpp
FreeRTOS/YamahaLightingEsp32/main/BlockB++/src/: dimmer_time_adaptor.cpp  frame_history.cpp  highlight_detector.cpp  idle_state_detector.cpp  light_switch_flg_maker.cpp  lighting_switcher.cpp  music_data_handler.cpp  music_to_light_interpretor.cpp  performer_switch_detector.cpp  section_progression_detector.cpp  song_alternation_detector.cpp  songhook_detector.cpp  tempo_classifier.cpp
FreeRTOS/YamahaLightingEsp32/main/BlockC++/include/: config.hpp
FreeRTOS/YamahaLightingEsp32/main/BlockC++/include/controllers/: data_dispatcher.hpp  data_receive_handler.hpp
FreeRTOS/YamahaLightingEsp32/main/BlockC++/include/models/: blockc_types.hpp  light_effect.hpp  light_scene.hpp  light_segment.hpp  scene_manager.hpp
FreeRTOS/YamahaLightingEsp32/main/BlockC++/include/utils/: color_utils.hpp
FreeRTOS/YamahaLightingEsp32/main/BlockC++/src/: config.cpp
FreeRTOS/YamahaLightingEsp32/main/BlockC++/src/controllers/: data_dispatcher.cpp  data_receive_handler.cpp
(+21 files in other folders)
